[package]
name = "overthrow-client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
overthrow-types = { path = "../overthrow-types" }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tokio-tungstenite = "0.28.0"
serde_json = "1.0.145"
tui-big-text = "0.7.1"
uuid = { version = "1.18.1", features = ["v7"] }
itertools = "0.14.0"
