[package]
name = "overthrow-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
typestate = "0.8.0"
itertools = "0.14.0"
subenum = "1.1.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
schemars = "1.0.4"
itermore = { version = "0.8.0", features = ["array_chunks"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
