[package]
name = "overthrow-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5.50", features = ["derive"] }
console-subscriber = "0.4.1"
futures = { version = "0.3.31", default-features = false }
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
overthrow-engine = { path = "../overthrow-engine" }
overthrow-types = { path = "../overthrow-types" }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v7"] }
