[package]
name = "overthrow-types"
version = "0.1.0"
edition = "2024"

[dependencies]
overthrow-engine = { path = "../overthrow-engine" }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
